test:redirect to a guesthouse register form page

--- a/config/locales/user-model-pt-BR.yml
+++ b/config/locales/user-model-pt-BR.yml
@@ -5,3 +5,6 @@ pt-BR:
     attributes:
       user:
         name: 'Nome'
+        roles:
+          guest: 'Hóspede'
+          guesthouse_owner: 'Proprietário de Pousada'
