test:owner register a new guesthouse

--- a/config/locales/guesthouse-model-pt-BR.yml
+++ b/config/locales/guesthouse-model-pt-BR.yml
@@ -8,13 +8,13 @@ pt-BR:
         brand_name: 'Nome Fantasia'
         registration_code: 'CNPJ'
         email: 'E-mail'
-        phone: 'Telefone'
+        phone_number: 'Telefone'
         description: 'Descrição'
-        pets: 'Aceita Animais'
+        pets: 'Aceita Pets'
         use_policy: 'Política de Uso'
         checkin_hour: 'Hora de Check-in'
         checkout_hour: 'Hora de Check-out'
-        active: 'Ativo'
+        active: 'Pousada Ativa'
         payment_method: 'Formas de Pagamento'
         payment_methods:
           credit_card: 'Cartão de Crédito'
