--- a/config/locales/payment_methods-pt-BR.yml
+++ b/config/locales/payment_methods-pt-BR.yml
@@ -1,6 +1,10 @@
 pt-BR:
-  payment_methods:
-    credit_card: "Cartão de crédito"
-    debit_card: "Cartão de débito"
-    pix: "Pix"
+  credit_card: "Cartão de crédito"
+  debit_card: "Cartão de débito"
+  pix: "Pix"
+  activerecord:
+    models:
+      payment_method: 'Forma de Pagamento'
+    attributes:
+        method: 'Método'
     # Add other payment methods here
