fix:altered search test to expect 2 guesthouses

--- a/config/locales/guesthouse-model-pt-BR.yml
+++ b/config/locales/guesthouse-model-pt-BR.yml
@@ -1,7 +1,9 @@
 pt-BR:
   activerecord:
     models:
-      guesthouse: 'Pousada'
+      guesthouse:
+        one: 'Pousada'
+        other: 'Pousadas'
     attributes:
       guesthouse:
         corporate_name: 'Razão Social'
