feat:user sees bookings list

--- a/config/locales/booking-model-pt-BR.yml
+++ b/config/locales/booking-model-pt-BR.yml
@@ -15,3 +15,4 @@ pt-BR:
           pending: 'Pendente'
           active: 'Ativa'
           finished: 'Finalizada'
+          canceled: 'Cancelado'
