feat:user sees all reviews from guesthouse

--- a/config/locales/review-model-pt-BR.yml
+++ b/config/locales/review-model-pt-BR.yml
@@ -1,7 +1,9 @@
 pt-BR:
   activerecord:
     models:
-      review: 'Avaliação'
+      review:
+        one: 'Avaliação'
+        other: 'Avaliações'
     attributes:
       review:
         rating: 'Nota'
