feat:guesthouse owner respond to review
he sees the response form

--- a/config/locales/review-model-pt-BR.yml
+++ b/config/locales/review-model-pt-BR.yml
@@ -22,3 +22,4 @@ pt-BR:
           'Very Good = 4': 'Muito Bom = 4'
           'Great = 5': 'Ótimo = 5'
         comment: 'Comentário'
+        response: 'Resposta'
