--- a/config/locales/payment_methods-pt-BR.yml
+++ b/config/locales/payment_methods-pt-BR.yml
@@ -4,7 +4,8 @@ pt-BR:
   pix: "Pix"
   activerecord:
     models:
-      payment_method: 'Forma de Pagamento'
+      payment_method:
+        one: 'Forma de Pagamento'
+        other: 'Formas de Pagamento'
     attributes:
         method: 'Método'
-    # Add other payment methods here
