feat:add images for guesthouses

--- a/config/locales/guesthouse-model-pt-BR.yml
+++ b/config/locales/guesthouse-model-pt-BR.yml
@@ -19,3 +19,4 @@ pt-BR:
         active: 'Pousada Ativa'
         address: 'Endereço'
         payment_methods: 'Formas de Pagamento'
+        images: 'Imagens'
