feat:user adds images to room

--- a/config/locales/room-model-pt-BR.yml
+++ b/config/locales/room-model-pt-BR.yml
@@ -7,13 +7,15 @@ pt-BR:
         name: 'Nome'
         description: 'Descrição'
         size: 'Tamanho'
-        max_people: 'Acomodação máxima'
-        daily_rate: 'Valor da diária'
+        max_people: 'Acomodação Máxima'
+        daily_rate: 'Valor da Diária'
         bathroom: 'Banheiro'
         balcony: 'Varanda'
-        air_conditioning: 'Ar condicionado'
+        air_conditioning: 'Ar Condicionado'
         tv: 'TV'
-        wardrobe: 'Guarda-roupa'
+        wardrobe: 'Guarda-Roupa'
         safe: 'Cofre'
         accessible: 'Acessível para PCDs'
         available: 'Disponível'
+        images: 'Imagens'
+        photos: 'Fotos'
